# aiboard-cli

./: Cargo.toml
.claude/: settings.local.json
src/: main.rs
src/cli/: args.rs  formatter.rs  handler.rs  mod.rs
src/domain/: entity.rs  error.rs  repository.rs
src/infra/: backup.rs  http.rs  logger.rs  mod.rs  sqlite.rs
src/infra/migrations/: v001.sql  v002.sql  v003.sql  v004.sql
src/usecase/: cleanup.rs  hook.rs  message.rs  mod.rs  setup.rs  thread.rs
tests/: integration_test.rs
