[package]
name = "aiboard"
version = "0.1.0"
edition = "2021"
description = "CLI tool for inter-agent communication and conversation log persistence"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
ureq = "2"
url = "2"
htmd = "0.5"
ctrlc = "3"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
